--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.14"
